--- a/nightowl/src/main/resources/application.properties
+++ b/nightowl/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/nightowl?serverTimezone=CET
 spring.datasource.username=root
 spring.datasource.password=password
